--- a/css/main.css
+++ b/css/main.css
@@ -86,7 +86,7 @@ a:hover {
 }
 
 /*TODAS LAS PORTADAS DE LA PÁGINA*/
-.portada .porta{
+.portada .img-cover{
   min-width: 50%;
   max-width: 100%;
 }
@@ -107,21 +107,54 @@ a:hover {
   display: flex;
   align-items: center;
   justify-content: center;
+  position:absolute;
+  /* transform:translate(-50%,-50%) */
+}
+
+.act-titulo{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .actividades .actividad{
   padding: 10px;
+  /* width: 320px; */
+  position:relative;
+  overflow: hidden;
   /* width: 60px; */
+}
+
+.actividad::before{
+  content:'';
+  position: absolute;
+  top:0;
+  left: 180%;
+  height: 100%;
+  width: 100%;
+  background:rgba(255,255,255,.3);
+  z-index: 1;
+  transform: skew(45deg);
+  transition:.5s;
 }
 
 .actividad .disciplina{
   display: flex;
   justify-content: center;
   align-items: center;
+  
 }
 
-.actividad .fotoact{
+.actividad .img-actividad{
   width: 100%;
+  /* filter: grayscale(100%); */
+  transition: 2s;
+  object-fit: cover;
+}
+
+.actividad .img-actividad:hover{
+  /* filter: grayscale(0%); */
+  transform:scale(1.15);
 }
 
 
