--- a/css/main.css
+++ b/css/main.css
@@ -107,7 +107,7 @@ a:hover {
   display: flex;
   align-items: center;
   justify-content: center;
-  position:absolute;
+  /* position:absolute; */
   /* transform:translate(-50%,-50%) */
 }
 
@@ -142,7 +142,31 @@ a:hover {
   display: flex;
   justify-content: center;
   align-items: center;
-  
+  /*color:#CFCFCF;
+  background-color: #000000;
+  width: 200px;
+  height: 50px; */
+}
+
+.actividad .sp-actividad{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.actividad .alter-disciplina{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color:#CFCFCF;
+  background-color: #000000;
+  width: 200px;
+  height: 50px;
+}
+.alter-disciplina:hover {
+  text-decoration: none;
+  color: var(--clr-accent);
+  transform:scale(1.1);
 }
 
 .actividad .img-actividad{
