--- a/css/main.css
+++ b/css/main.css
@@ -181,6 +181,18 @@ a:hover {
   transform:scale(1.15);
 }
 
+/* Area ejercicios Gimnasio */
+.img-ejercicio{
+  width: 200px;
+  height: 150px;
+  /* filter: grayscale(100%); */
+  transition: 2s;
+  object-fit: cover;
+}
+.img-ejercicio:hover{
+  /* filter: grayscale(0%); */
+  transform:scale(1.15);
+}
 
 /*Nosotros*/
 /* ¿Quienes somos? */
