--- a/css/main.css
+++ b/css/main.css
@@ -6,39 +6,37 @@
   background: var(--clr-main);
   color: var(--clr-white);
 }
-
 :root {
-    --clr-main: #303030;
-    --clr-secondary: #231F4D;
-    --clr-accent: #DF2467;
-    --clr-white: #CFCFCF;
-    --clr-black: #121212;
-    --clr-grey: #f1f1f1;
-    --clr-semi-dark: #b8b8b8;
-    --clr-dark-grey: #4d4d4d;
-    --clr-extra-dark-grey: #202020;
-    --clr-dark-blue: #060922;
-    --clr-semi-dark-blue: #000531;
-    --ltr-main-font-f: "Jost", "sans-serif";
-    --rtl-main-font-f: "Tajawal", "sans-serif";
-
-    --swiper-navigation-size: 44px;
-    --swiper-theme-color: #007aff;
-    --animate-duration: 1s;
-    --animate-delay: 1s;
-    --animate-repeat: 1;
+  --clr-main: #CFCFCF;
+  --clr-secondary: #231F4D;
+  --clr-accent: #007aff;
+  --clr-white: #f1f1f1;
+  --clr-black: #121212;
+  --clr-grey: #f1f1f1;
+  --clr-semi-dark: #b8b8b8;
+  --clr-dark-grey: #4d4d4d;
+  --clr-extra-dark-grey: #202020;
+  --clr-dark-blue: #060922;
+  --clr-semi-dark-blue: #000531;
+  --ltr-main-font-f: "Jost", "sans-serif";
+  --rtl-main-font-f: "Tajawal", "sans-serif";
+  --swiper-navigation-size: 44px;
+  --swiper-theme-color: #007aff;
+  --animate-duration: 1s;
+  --animate-delay: 1s;
+  --animate-repeat: 1;
 }
+
 
 body {
   font-family: var(--ltr-main-font-f);
   direction: ltr;
   text-align: left;
   position: relative;
-  /* color: var(--clr-accent); */
-  background: var(--clr-white);
   overflow-x: hidden;
   scroll-behavior: smooth;
   transition: all 0.25s ease-in-out 0s;
+  background-color: var(--clr-white);
 }
 
 div{
@@ -74,8 +72,6 @@ ul{
   padding-left: 2rem;
 }
 
-
-
 a {
   text-decoration: none;
   color: inherit;
@@ -83,6 +79,10 @@ a {
 a:hover {
   text-decoration: none;
   color: var(--clr-accent);
+}
+
+h1, h2, h3, h4, h5, h6, p {
+  color: var(--clr-dark-blue);
 }
 
 /*TODAS LAS PORTADAS DE LA PÁGINA*/
