--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,7 @@ body {
   overflow-x: hidden;
   scroll-behavior: smooth;
   transition: all 0.25s ease-in-out 0s;
-  background: var(--clr-white);
+  background-color: var(--clr-white);
 }
 
 div{
