--- a/css/lightDark.css
+++ b/css/lightDark.css
@@ -2,9 +2,10 @@
   --clr-main: #303030;
   --clr-accent: #DF2467;
   --clr-dark-blue: var(--clr-white);
-  background-color: var(--clr-dark-grey);
+  --clr-dark-grey: var(--clr-semi-dark);
+  background-color: var(--clr-extra-dark-grey);
 
-  
+   
   .light-logo {
     display: none;
   }
@@ -21,4 +22,3 @@
     display: block;
   }
 }
-
