--- a/css/formulario.css
+++ b/css/formulario.css
@@ -1,55 +1,196 @@
-.form-gral{
-    display: flex;
-    justify-content: space-between;
+.form-gral {
+  display: flex;
+  justify-content: center;
 }
 
 /*Parte izquierda*/
-.form-contacto{    
-    width: 40%;
+.form-contacto {
+  width: 50%;
 }
-h2{
-    display: flex;
-    justify-content: center;
-    font-size: 30px;
-}
-.form-contacto .controles{
-    padding: 10px;
-    width: 300px;
-    border-radius: 2px;
-    font-size: 15px;
+h2 {
+  display: flex;
+  justify-content: center;
+  font-size: 30px;
 }
 
-.form-contacto .form-consulta{
-    padding: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+form {
+  padding: 1rem 0;
 }
 
-.form-consulta .form-ingreso{
-    font-size: 25px;
+.form-consulta {
+  width: 100%;
+  position: relative;
+  margin: 2rem 0;
 }
 
-#box{
-    height: 200px;
+input,
+textarea {
+  padding: 10px 10px 10px 5px;
+  display: block;
+  width: 100%;
+  border: none;
+  border-bottom: 1px solid var(--clr-dark-blue);
+  background-color: transparent;
+  font-family: var(--ltr-main-font-f);
+  color: var(--clr-dark-blue);
+  font-size: 18px;
 }
 
-.form-button{
-    width: 100px;
-    height: 50px;
-    font-size: 15px;
+input:focus,
+textarea:focus {
+  outline: none;
 }
 
+label {
+  color: var(--clr-dark-blue);
+  position: absolute;
+  left: 5px;
+  top: 10px;
+  transition: 0.2s ease all;
+  -moz-transition: 0.2s ease all;
+  -webkit-transition: 0.2s ease all;
+}
+
+input:focus~label,
+input:valid~label {
+  top: -20px;
+  color: var(--clr-accent);
+}
+
+textarea:focus~label{
+  top: -20px;
+  color: var(--clr-accent);
+}
+textarea:valid~label {
+  top: -20px;
+  color: var(--clr-accent);
+}
+
+.bar {
+  position: relative;
+  display: block;
+  width: 100%;
+}
+
+.bar:before,
+.bar:after {
+  content: '';
+  height: 2px;
+  width: 0;
+  bottom: 0;
+  position: absolute;
+  background: var(--clr-accent);
+  transition: 0.2s ease all;
+  -moz-transition: 0.2s ease all;
+  -webkit-transition: 0.2s ease all;
+}
+
+.bar:before {
+  left: 50%;
+}
+
+.bar:after {
+  right: 50%;
+}
+
+input:focus~.bar:before,
+input:focus~.bar:after,
+textarea:focus~.bar:before,
+textarea:focus~.bar:after {
+  width: 50%;
+}
+
+.highlight {
+  position: absolute;
+  height: 60%;
+  width: 100px;
+  top: 25%;
+  left: 0;
+  pointer-events: none;
+  opacity: 0.5;
+}
+
+input:focus~.highlight,
+textarea:focus~.highlight {
+  -webkit-animation: inputHighlighter 0.3s ease;
+  -moz-animation: inputHighlighter 0.3s ease;
+  animation: inputHighlighter 0.3s ease;
+}
+
+@-webkit-keyframes inputHighlighter {
+  from {
+    background: var(--clr-accent);
+  }
+
+  to {
+    width: 0;
+    background: transparent;
+  }
+}
+
+@-moz-keyframes inputHighlighter {
+  from {
+    background: var(--clr-accent);
+  }
+
+  to {
+    width: 0;
+    background: transparent;
+  }
+}
+
+@keyframes inputHighlighter {
+  from {
+    background: var(--clr-accent);
+  }
+
+  to {
+    width: 0;
+    background: transparent;
+  }
+}
+
+.form-button {
+  width: 50%;
+  height: 100%;
+  margin: 0 auto;
+  font-size: 20px;
+  color: var(--clr-dark-blue);
+}
+.form-button:hover {
+  color: var(--clr-accent);
+  cursor: pointer;
+}
 /*Parte derecha*/
-.form-information{
-    width: 60%;
+.form-information {
+  width: 50%;
 }
 
-.form-information .form-help{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.form-help {
+  display: block;
+  align-items: center;
+  justify-content: center;
 }
-.info-contacto{
-    font-size: 20px;
+
+.form-help img {
+  width: 100%;
+}
+
+.info-contacto {
+  font-size: 20px;
+  text-align: center;
+}
+
+@media (max-width: 768px) {
+
+  .form-contacto,
+  .form-information {
+    width: 100%;
+  }
+  .form-contacto {
+    display: block;
+  }
+  .form-help img {
+    display: none;
+  }
 }
