--- a/css/header.css
+++ b/css/header.css
@@ -323,7 +323,7 @@ header {
       left: -100%;
       width: 100%;
       height: 100%;
-      top: 75px;
+      top: 0;
       margin: 0;
       transition: all 0.5s ease-in-out 0s;
   }
