pulidita de rendimiento

--- a/css/header.css
+++ b/css/header.css
@@ -311,6 +311,8 @@ header {
       align-items: center;
       justify-content: center;
       min-width: 90%;
+      padding: 20px 0;
+      margin: 0;
   }
 
   .logo {
@@ -373,10 +375,6 @@ header {
 @media (min-width:768px) {
   .nav-menu {
       flex: 0 0 auto;
-  }
-
-  .h-container {
-      margin-bottom: 0;
   }
 
   header a {
