--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ body {
   background-color: var(--clr-white);
 }
 main {
-  padding-bottom: 1rem;
+  padding: 4.3rem 0rem 1rem 0rem;
 }
 div{
   display: block;
