--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ body {
   background-color: var(--clr-white);
 }
 main {
-  padding: 4.3rem 0rem 1rem 0rem;
+  padding-bottom: 1rem;
 }
 div{
   display: block;
@@ -84,8 +84,9 @@ h1, h2, h3, h4, h5, h6, p {
 
 /*TODAS LAS PORTADAS DE LA PÁGINA*/
 .portada .img-cover{
-  min-width: 50%;
-  max-width: 100%;
+  width: 100%;
+  object-fit: cover;
+  height: 25rem;
 }
 
 /*Area de presentación*/
