--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@
     --clr-main: #CFCFCF;
     --clr-secondary: #231F4D;
     --clr-accent: #007aff;
+    --clr-accent-hover: #007bff3b;
     --clr-white: #f1f1f1;
     --clr-black: #121212;
     --clr-grey: #f1f1f1;
