--- a/css/tienda.css
+++ b/css/tienda.css
@@ -30,8 +30,8 @@ section {
         position: relative;
         width: -webkit-fill-available;
         margin-bottom: 35px;
-        border-top-left-radius: 1rem;
-        border-top-right-radius: 1rem;
+        border-top-left-radius: .8rem;
+        border-top-right-radius: .8rem;
         margin: 0;
 }
 .card-txt{
