--- a/css/lightDark.css
+++ b/css/lightDark.css
@@ -3,9 +3,17 @@
   --clr-accent: #DF2467;
   --clr-dark-blue: var(--clr-white);
   --clr-dark-grey: var(--clr-semi-dark);
+  --clr-accent-hover: #df24652a;
   background-color: var(--clr-extra-dark-grey);
 
-   
+  .logo0 {
+    fill: #DCDAC9;
+  }
+
+  .logo1 {
+    fill: #ABABAB;
+  }
+
   .light-logo {
     display: none;
   }
