--- a/css/cart.css
+++ b/css/cart.css
@@ -77,11 +77,18 @@ section {
     grid-area: precio;
     justify-self: end;
 }
+.s-total {
+    margin: 0;
+    padding: 1rem;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
 
 .total {
     display: flex;
     flex-direction: row;
-    padding: 0 1rem;
+    padding: 0;
     justify-content: space-between;
 }
 
